; ModuleID = '/home/carl/AnghaBench/git/contrib/credential/osxkeychain/extr_git-credential-osxkeychain.c_add_internet_password.c'
source_filename = "/home/carl/AnghaBench/git/contrib/credential/osxkeychain/extr_git-credential-osxkeychain.c_add_internet_password.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@protocol = common dso_local global i32 0, align 4
@host = common dso_local global i32 0, align 4
@username = common dso_local global i32 0, align 4
@password = common dso_local global i32 0, align 4
@KEYCHAIN_ARGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @add_internet_password to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_internet_password() #0 {
  %1 = load i32, i32* @protocol, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %12

3:                                                ; preds = %0
  %4 = load i32, i32* @host, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %12

6:                                                ; preds = %3
  %7 = load i32, i32* @username, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i32, i32* @password, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %9, %6, %3, %0
  br label %20

13:                                               ; preds = %9
  %14 = load i32, i32* @KEYCHAIN_ARGS, align 4
  %15 = load i32, i32* @password, align 4
  %16 = call i32 @KEYCHAIN_ITEM(i32 %15)
  %17 = call i64 @SecKeychainAddInternetPassword(i32 %14, i32 %16, i32* null)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  br label %20

20:                                               ; preds = %12, %19, %13
  ret void
}

declare dso_local i64 @SecKeychainAddInternetPassword(i32, i32, i32*) #1

declare dso_local i32 @KEYCHAIN_ITEM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
